--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,22 +22,30 @@ jobs:
         python-version: '3.9'
         cache: 'pip'
 
-    # 修复依赖安装步骤，直接使用requirements.txt
     - name: 安装依赖
+      # 使用GitHub Actions的条件语法替代脚本内的if判断
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        if [ "${{ matrix.os }}" = "macos-latest" ]; then
-          brew install python-tk
-        fi
+      # macOS额外安装步骤单独写
+      if: matrix.os == 'windows-latest'
 
-    - name: 打包程序
+    - name: 安装依赖 (macOS)
       run: |
-        if [ "${{ matrix.os }}" = "windows-latest" ]; then
-          pyinstaller --onefile --windowed --name "实时翻译助手" *.py
-        else
-          pyinstaller --onefile --windowed --name "实时翻译助手" *.py
-        fi
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        brew install python-tk
+      if: matrix.os == 'macos-latest'
+
+    - name: 打包程序 (Windows)
+      run: |
+        pyinstaller --onefile --windowed --name "实时翻译助手" *.py
+      if: matrix.os == 'windows-latest'
+
+    - name: 打包程序 (macOS)
+      run: |
+        pyinstaller --onefile --windowed --name "实时翻译助手" *.py
+      if: matrix.os == 'macos-latest'
 
     - name: 上传打包产物
       uses: actions/upload-artifact@v4
