--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,6 @@ jobs:
         python-version: '3.9'
         cache: 'pip'
 
-    # 安装SSL依赖（确保HTTPS正常工作）
     - name: 安装Windows依赖
       if: matrix.os == 'windows-latest'
       run: |
@@ -33,24 +32,24 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         brew install openssl
-        brew install python-tk  # 单独安装tkinter系统依赖
+        brew install python-tk
         echo "export PATH=/usr/local/opt/openssl/bin:$PATH" >> ~/.bash_profile
 
-    # 安装Python依赖（不含tkinter，因为它是标准库）
     - name: 安装项目依赖
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    # 关键修复：明确指定你的Python文件名（替换为实际文件名）
     - name: 打包程序 (Windows)
       if: matrix.os == 'windows-latest'
       run: |
-        pyinstaller --onefile --windowed --name "实时翻译助手" *.py
+        pyinstaller --onefile --windowed --name "实时翻译助手" translator.py  # 假设文件名为translator.py
 
     - name: 打包程序 (macOS)
       if: matrix.os == 'macos-latest'
       run: |
-        pyinstaller --onefile --windowed --name "实时翻译助手" *.py
+        pyinstaller --onefile --windowed --name "实时翻译助手" translator.py  # 假设文件名为translator.py
 
     - name: 上传打包产物
       uses: actions/upload-artifact@v4
